@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-06-25T01:24:02Z",
+  "timestamp" : "2024-06-25T12:36:46Z",
   "count_outdated" : 8016,
   "uniques_outdated" : 3525,
-  "count" : 8190,
-  "uniques" : 3639,
+  "count" : 8192,
+  "uniques" : 3641,
   "clones" : [
     {
       "timestamp": "2024-06-11T00:00:00Z",
@@ -112,6 +112,15 @@
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2024-06-25T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
