@@ -1,6 +1,6 @@
 {
-  "count": 174,
-  "uniques": 93,
+  "count": 176,
+  "uniques": 94,
   "clones": [
     {
       "timestamp": "2024-06-11T00:00:00Z",
@@ -61,6 +61,11 @@
       "timestamp": "2024-06-24T00:00:00Z",
       "count": 4,
       "uniques": 3
+    },
+    {
+      "timestamp": "2024-06-25T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
